[package]
name = "egui-tao"
version = "0.15.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Bindings for using egui with tao"
edition = "2018"
homepage = "https://github.com/emilk/egui/tree/master/egui-tao"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/egui-tao"
categories = ["gui", "game-development"]
keywords = ["tao", "egui", "gui", "gamedev"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
egui = { version = "0.15.0", path = "../egui", default-features = false, features = ["single_threaded"] }
tao = { git = "https://github.com/tauri-apps/tao", branch = "next", version = "0.5" }

epi = { version = "0.15.0", path = "../epi", optional = true }

copypasta = { version = "0.7", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
webbrowser = { version = "0.5", optional = true }

# feature screen_reader
tts = { version = "0.17", optional = true }

[features]
default = ["clipboard", "links"]

# enable cut/copy/paste to OS clipboard.
# if disabled a clipboard will be simulated so you can still copy/paste within the egui app.
clipboard = ["copypasta"]

# enable opening links in a browser when an egui hyperlink is clicked.
links = ["webbrowser"]

# experimental support for a screen reader
screen_reader = ["tts"]

persistence = ["egui/serialize", "serde"]
serialize = ["egui/serialize", "serde"]

# implement bytemuck on most types.
convert_bytemuck = ["egui/convert_bytemuck"]
