[package]
name = "egui_glow"
version = "0.15.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Bindings for using egui natively using the glow library"
edition = "2018"
homepage = "https://github.com/emilk/egui/tree/master/egui_glow"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/egui_glow"
categories = ["gui", "game-development"]
keywords = ["glow", "egui", "gui", "gamedev"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
  "src/shader/*.glsl",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
egui = { version = "0.15.0", path = "../egui", default-features = false, features = ["single_threaded"] }
epi = { version = "0.15.0", path = "../epi", optional = true }
glow = "0.11"
memoffset = "0.6"

[target.'cfg(target_arch = "linux")'.dependencies]
gtk= "0.14"
glib = "0.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-tao = { version = "0.15.0", path = "../egui-tao", default-features = false, features = ["epi"], optional = true }
tao-glutin = { git = "https://github.com/wusyong/glutin", branch = "tao", version = "0.1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["console"] }
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }

[features]
default = ["clipboard", "default_fonts", "links", "persistence", "tao"]

# enable cut/copy/paste to OS clipboard.
# if disabled a clipboard will be simulated so you can still copy/paste within the egui app.
clipboard = ["egui-tao/clipboard"]

# If set, egui will use `include_bytes!` to bundle some fonts.
# If you plan on specifying your own fonts you may disable this feature.
default_fonts = ["egui/default_fonts"]

# enable opening links in a browser when an egui hyperlink is clicked.
links = ["egui-tao/links"]

# enable code for sabing
persistence = [
  "egui-tao/persistence",
  "egui/persistence",
  "epi", # also implied by the lines below, see https://github.com/rust-lang/cargo/issues/8832
  "epi/file_storage",
  "epi/persistence",
]

# experimental support for a screen reader
screen_reader = ["egui-tao/screen_reader"]

# enable glutin/tao integration.
# if you want to use glow painter on web disable it.
# if disabled reduce crate size and build time.
tao = ["egui-tao", "tao-glutin"]
