[package]
name = "eframe_tao"
version = "0.21.0"
authors = [ "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>" ]
description = "egui framework - write GUI apps that compiles to web and/or natively"
edition = "2021"
rust-version = "1.61"
homepage = "https://github.com/emilk/egui/tree/master/crates/eframe"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/crates/eframe"
categories = [ "gui", "game-development" ]
keywords = [ "egui", "gui", "gamedev" ]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml"
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "eframe"

[features]
default = [ "default_fonts", "glow" ]
dark-light = [ "dep:dark-light" ]
default_fonts = [ "egui/default_fonts" ]
glow = [ "dep:glow", "egui_glow" ]
persistence = [
  "directories-next",
  "egui-winit/serde",
  "egui/persistence",
  "ron",
  "serde"
]
puffin = [ "dep:puffin", "egui_glow?/puffin" ]
screen_reader = [ "egui-winit/screen_reader", "tts" ]
wgpu = [ "dep:wgpu", "egui-wgpu" ]

[dependencies]
egui = { version = "0.19.0", path = "../egui", default-features = false, features = [ "bytemuck", "tracing" ] }
tracing = { version = "0.1", default-features = false, features = [ "std" ] }
document-features = { version = "0.2", optional = true }
egui_glow = { package = "egui_glow_tao", version = "0.21.0", path = "../egui_glow", optional = true, default-features = false }
egui-wgpu = { version = "0.19.0", path = "../egui-wgpu", optional = true, features = [ "winit" ] }
glow = { version = "0.11", optional = true }
ron = { version = "0.8", optional = true, features = [ "integer128" ] }
serde = { version = "1", optional = true, features = [ "derive" ] }
wgpu = { version = "0.13", optional = true }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
dark-light = { version = "0.2.1", optional = true }
egui-winit = { package = "egui-tao", version = "0.21.0", path = "../egui-winit", default-features = false, features = [ "clipboard", "links" ] }
glutin = { package = "glutin_tao", version = "0.31.0" }
winit = { package = "tao", version = "0.17", default-features = false }
puffin = { version = "0.13", optional = true }
directories-next = { version = "2", optional = true }

[target."cfg(target_arch = \"wasm32\")".dependencies]
bytemuck = "1.7"
getrandom = { version = "0.2", features = [ "js" ] }
js-sys = "0.3"
percent-encoding = "2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.52", features = [
  "BinaryType",
  "Blob",
  "Clipboard",
  "ClipboardEvent",
  "CompositionEvent",
  "console",
  "CssStyleDeclaration",
  "DataTransfer",
  "DataTransferItem",
  "DataTransferItemList",
  "Document",
  "DomRect",
  "DragEvent",
  "Element",
  "Event",
  "EventListener",
  "EventTarget",
  "ExtSRgb",
  "File",
  "FileList",
  "FocusEvent",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "InputEvent",
  "KeyboardEvent",
  "Location",
  "MediaQueryList",
  "MouseEvent",
  "Navigator",
  "Performance",
  "Storage",
  "Touch",
  "TouchEvent",
  "TouchList",
  "WebGl2RenderingContext",
  "WebglDebugRendererInfo",
  "WebGlRenderingContext",
  "WheelEvent",
  "Window"
] }
tts = { version = "0.20", optional = true }
