[package]
name = "egui-tao"
version = "0.20.1"
authors = [ "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>" ]
description = "Bindings for using egui with tao"
edition = "2021"
rust-version = "1.61"
homepage = "https://github.com/wusyong/egui/tree/0.19.0/crates/egui-winit"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wusyong/egui/tree/0.19.0/crates/egui-winit"
categories = [ "gui", "game-development" ]
keywords = [ "winit", "egui", "gui", "gamedev" ]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml"
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "egui_winit"

[features]
default = ["clipboard", "links"]

## [`bytemuck`](https://docs.rs/bytemuck) enables you to cast [`egui::epaint::Vertex`], [`egui::Vec2`] etc to `&[u8]`.
bytemuck = ["egui/bytemuck"]

## Enable cut/copy/paste to OS clipboard.
## If disabled a clipboard will be simulated so you can still copy/paste within the egui app.
clipboard = ["arboard", "smithay-clipboard"]

## Enable opening links in a browser when an egui hyperlink is clicked.
links = ["webbrowser"]

## Enable profiling with the [`puffin`](https://docs.rs/puffin) crate.
puffin = ["dep:puffin"]

## Experimental support for a screen reader.
screen_reader = ["tts"]

## Allow serialization of [`WindowSettings`] using [`serde`](https://docs.rs/serde).
serde = ["egui/serde", "dep:serde"]

[dependencies]
egui = { version = "0.19.0", path = "../egui", default-features = false, features = [ "tracing" ] }
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
tracing = { version = "0.1", default-features = false, features = [ "std" ] }
winit = { package = "tao", version = "0.15", default-features = false }
document-features = { version = "0.2", optional = true }
puffin = { version = "0.13", optional = true }
serde = { version = "1.0", optional = true, features = [ "derive" ] }
tts = { version = "0.20", optional = true }
webbrowser = { version = "0.7", optional = true }

[target."cfg(any(target_os=\"linux\", target_os=\"dragonfly\", target_os=\"freebsd\", target_os=\"netbsd\", target_os=\"openbsd\"))".dependencies]
smithay-clipboard = { version = "0.6.3", optional = true }

[target."cfg(not(target_os = \"android\"))".dependencies]
arboard = { version = "2.1", optional = true, default-features = false }
