[package]
name = "egui-tao"
version = "0.21.0"
authors = [ "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>" ]
description = "Bindings for using egui with tao"
edition = "2021"
rust-version = "1.61"
homepage = "https://github.com/wusyong/egui/tree/0.19.0/crates/egui-winit"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wusyong/egui/tree/0.19.0/crates/egui-winit"
categories = [ "gui", "game-development" ]
keywords = [ "winit", "egui", "gui", "gamedev" ]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml"
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "egui_winit"

[features]
default = [ "clipboard", "links" ]
bytemuck = [ "egui/bytemuck" ]
clipboard = [ "arboard", "smithay-clipboard" ]
links = [ "webbrowser" ]
puffin = [ "dep:puffin" ]
screen_reader = [ "tts" ]
serde = [ "egui/serde", "dep:serde" ]

[dependencies]
egui = { version = "0.19.0", path = "../egui", default-features = false, features = [ "tracing" ] }
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
tracing = { version = "0.1", default-features = false, features = [ "std" ] }
winit = { package = "tao", version = "0.17", default-features = false }
document-features = { version = "0.2", optional = true }
puffin = { version = "0.13", optional = true }
serde = { version = "1.0", optional = true, features = [ "derive" ] }
tts = { version = "0.20", optional = true }
webbrowser = { version = "0.7", optional = true }

[target."cfg(any(target_os=\"linux\", target_os=\"dragonfly\", target_os=\"freebsd\", target_os=\"netbsd\", target_os=\"openbsd\"))".dependencies]
smithay-clipboard = { version = "0.6.3", optional = true }

[target."cfg(not(target_os = \"android\"))".dependencies]
arboard = { version = "2.1", optional = true, default-features = false }
