[package]
name = "egui-tao"
version = "0.23.0"
authors = [ "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>" ]
description = "Bindings for using egui with winit"
edition = "2021"
rust-version = "1.65"
homepage = "https://github.com/emilk/egui/tree/master/crates/egui-winit"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/crates/egui-winit"
categories = [ "gui", "game-development" ]
keywords = [ "winit", "egui", "gui", "gamedev" ]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml"
]

[package.metadata.docs.rs]
all-features = true

[features]
default = [ "clipboard", "links" ]
bytemuck = [ "egui/bytemuck" ]
clipboard = [ "arboard", "smithay-clipboard" ]
links = [ "webbrowser" ]
puffin = [ "dep:puffin" ]
serde = [ "egui/serde", "dep:serde" ]

[dependencies]
egui = { version = "0.22.0", default-features = false, features = [ "log" ] }
log = { version = "0.4", features = [ "std" ] }
winit = { package = "tao", version = "0.19.0", default-features = false }
raw-window-handle = "0.5.0"
document-features = { version = "0.2", optional = true }
puffin = { version = "0.15", optional = true }
serde = { version = "1.0", optional = true, features = [ "derive" ] }
webbrowser = { version = "0.8.3", optional = true }

[target."cfg(not(target_arch=\"wasm32\"))".dependencies]
instant = { version = "0.1" }

[target."cfg(target_arch=\"wasm32\")".dependencies]
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[target."cfg(any(target_os=\"linux\", target_os=\"dragonfly\", target_os=\"freebsd\", target_os=\"netbsd\", target_os=\"openbsd\"))".dependencies]
smithay-clipboard = { version = "0.6.3", optional = true }

[target."cfg(not(target_os = \"android\"))".dependencies]
arboard = { version = "3.2", optional = true, default-features = false }
