[package]
name = "egui_glow_tao"
version = "0.21.0"
authors = [ "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>" ]
description = "Bindings for using egui natively using the glow library"
edition = "2021"
rust-version = "1.61"
homepage = "https://github.com/wusyong/egui/tree/0.19.0/crates/egui_glow"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wusyong/egui/tree/0.19.0/crates/egui_glow"
categories = [ "gui", "game-development" ]
keywords = [ "glow", "egui", "gui", "gamedev" ]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
  "src/shader/*.glsl"
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "egui_glow"

[features]
default = [ ]
clipboard = [ "egui-winit?/clipboard" ]
links = [ "egui-winit?/links" ]
screen_reader = [ "egui-winit?/screen_reader" ]
puffin = [ "dep:puffin", "egui-winit?/puffin" ]
winit = [ "egui-winit" ]

[dependencies]
egui = { version = "0.19.0", path = "../egui", default-features = false, features = [ "bytemuck" ] }
bytemuck = "1.7"
glow = "0.11"
memoffset = "0.6"
tracing = { version = "0.1", default-features = false, features = [ "std" ] }
document-features = { version = "0.2", optional = true }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
egui-winit = { package = "egui-tao", version = "0.21.0", path = "../egui-winit", optional = true, default-features = false }
puffin = { version = "0.13", optional = true }

[target."cfg(target_arch = \"wasm32\")".dependencies]
web-sys = { version = "0.3", features = [ "console" ] }
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
glutin = { package = "glutin_tao", version = "0.31.0" }

[[example]]
name = "pure_glow"
required-features = [ "winit", "egui/default_fonts" ]
