[package]
name = "egui_glow_tao"
version = "0.23.0"
authors = [ "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>" ]
description = "Bindings for using egui natively using the glow library"
edition = "2021"
rust-version = "1.65"
homepage = "https://github.com/emilk/egui/tree/master/crates/egui_glow"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/crates/egui_glow"
categories = [ "gui", "game-development" ]
keywords = [ "glow", "egui", "gui", "gamedev" ]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
  "src/shader/*.glsl"
]

[package.metadata.docs.rs]
all-features = true

[features]
default = [ ]
clipboard = [ "egui-winit?/clipboard" ]
links = [ "egui-winit?/links" ]
puffin = [ "dep:puffin", "egui-winit?/puffin" ]
winit = [ "egui-winit" ]

[dependencies]
egui = { version = "0.22.0", default-features = false, features = [ "bytemuck" ] }
bytemuck = "1.7"
glow = "0.12"
log = { version = "0.4", features = [ "std" ] }
memoffset = "0.6"
document-features = { version = "0.2", optional = true }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
egui-winit = { package = "egui-tao", version = "0.23.0", path = "../egui-winit", optional = true, default-features = false }
puffin = { version = "0.15", optional = true }

[target."cfg(target_arch = \"wasm32\")".dependencies]
web-sys = { version = "0.3", features = [ "console" ] }
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
glutin = "0.30"
raw-window-handle = "0.5.0"
glutin-winit = { package = "glutin_tao", version = "0.33.0", git = "https://github.com/tauri-apps/glutin", branch = "0.31" }

[[example]]
name = "pure_glow"
required-features = [ "winit", "egui/default_fonts" ]
